backend-py/kubernetes/ingress/ingress-celery.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: flower
spec:
  routes:
    - kind: Rule
      match: Host(`celery.supamax.app`)
      services:
        - name: flower-service
          port: 80
  tls:
    certResolver: default
