backend-py/kubernetes/ingress/ingress-supamax.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: supamax
spec:
  routes:
    - kind: Rule
      match: Host(`api.supamax.app`)
      services:
        - name: supamax-service
          port: 80
  tls:
    certResolver: default
